test(idp-basic): align backend test structure
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>